# sentry

design/step/: conduit-bracket-plate.step  conduit-bracket.step  gimbal-bracket.step  gun-bracket.step  pitch-axel-cap.step  pitch-axel.step  pitch-gear.step  pitch-limit-switch-bracket.step  pitch-pinion.step  rack.step  slide-arm.step  slide-motor-bracket.step  slide-pinion.step  wall-board-clip.step  yaw-bearing-bracket.step  yaw-gear-1.step  yaw-gear-2.step  yaw-pinion.step
design/stl/: arm.stl  conduit-bracket-plate.stl  gun-bracket.stl  pitch-axel-cap.stl  pitch-axel.stl  pitch-gear.stl  pitch-limit-switch-bracket.stl  pitch-motor-bracket.stl  rack-8t.stl  rack.stl  slide-arm.stl  slide-motor-bracket.stl  wall-board-clip.stl  yaw-bearing-bracket.stl  yaw-gear-1.stl  yaw-gear-2.stl
src/android/: build.gradle  cargo.sh
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/res/drawable/: fire_button.xml  (+10 more)
src/android/app/src/main/rust/: Cargo.toml  build.rs
src/android/gradle/wrapper/: gradle-wrapper.properties
src/arduino/: Command.h  StepperDriver.cpp  StepperDriver.h  motion.h  pins.h  sentry.ino  serialize.h
src/arduino/sentry/: Command.h  Status.h  StepperDriver.cpp  StepperDriver.h  config.h  motion.h  pins.h  sentry.ino  serialize.h
src/client/: index.ts  package.json  tsconfig.json  webpack.config.js
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/sentry/: arduino.rs  bus.rs  config.rs  http_server.rs  mod.rs  server.rs  stun_server.rs  video.rs  websocket_server.rs
(+19 files in other folders)
