[package]
name = "sentry"
version = "0.1.0"
authors = ["Jacob Jordan"]
edition = "2018"

[dependencies]
glib = "0.7"
gstreamer = "0.13"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
bytes = "0.4"
log = "0.4.6"
simplelog = "0.5.3"
futures = "0.1.26"
tokio = "0.1.18"
tokio-serial = "3.2"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
crc = "1.8.1"
byteorder = "1.3.1"
toml = "0.5.0"
rand = "0.6.5"
multiqueue = "0.3.2"